Revert "fixed logo spacing"
This reverts commit 919d43cca561ff83e84fc7944009f9df2d40b9b9.

--- a/Assets/css/styles2.css
+++ b/Assets/css/styles2.css
@@ -170,10 +170,8 @@ a:hover {
     .service-tabs {
         font-size: 0.8rem;
         width: 8rem;
-    }
 
-    .logosize{
-        width: 50%;
+
     }
 
     .mobile-tabs{
